# Roomie

./: .gitignore  README.en.md  README.ko.md  README.md
docs/interface_specifiaction/: rms_vs_interface.md
esp32_firmware/io_controller/: README.md  platformio.ini
esp32_firmware/io_controller/docs/: roomie_rc_ioc_interface.md
esp32_firmware/io_controller/extra_packages/roomie_msgs/: CMakeLists.txt  package.xml
esp32_firmware/io_controller/src/: main.cpp
esp32_firmware/io_controller/src/controller/: controller.cpp  controller.h
esp32_firmware/io_controller/src/services/: service_manager.cpp  service_manager.h
esp32_firmware/io_controller/src/topics/: topic_manager.cpp  topic_manager.h
esp32_firmware/io_controller/test/esp32_test/: platformio.ini
esp32_firmware/io_controller/test/esp32_test/src/: servo.cpp  ultrasonic.cpp.bak
gui/guest_gui/: config.js  index.html
gui/guest_gui/css/: common.css
gui/guest_gui/docs/: detail_architect.md
gui/guest_gui/js/: app.js  common.js  food.js  history.js  order.js  robot.js  supply.js
gui/guest_gui/test/: config.py  test_server.py
gui/staff_gui/: README.md  config.py  message.md  staff_app.py  staff_gui.ui  test_rms.py
log/: latest_build
ros2_ws/: .gitignore  fastrtps_profile.xml
ros2_ws/firmware/dev_ws/install/: local_setup.sh  setup.sh
ros2_ws/firmware/dev_ws/log/: latest_build
ros2_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/drive_base_msgs/share/drive_base_msgs/: local_setup.sh  package.sh
ros2_ws/install/micro_ros_agent/share/micro_ros_agent/: local_setup.sh  package.sh
ros2_ws/install/micro_ros_msgs/share/micro_ros_msgs/: local_setup.sh  package.sh
ros2_ws/log/: latest_build
ros2_ws/src/: set_pose.py  test_arm_server.py
ros2_ws/src/roomie_ac/: README.md  package.xml  setup.py
ros2_ws/src/roomie_ac/launch/: ac_launch.py
ros2_ws/src/roomie_ac/roomie_ac/: ac_node.py  aruco_vision_service.py  config.py  coordinate_test_node.py  coordinate_transformer.py  esp32.ino  image_servoing.py  kinematics_solver.py  motion_controller.py  review_request.md  ros_joint_publisher.py  serial_commander.py  serial_manager.py  vision_client.py  vision_service_client.py  yolo_vision_service.py
ros2_ws/src/roomie_ac/test/: test_yolo_ocr.py
ros2_ws/src/roomie_ac/urdf/: roomie2.urdf
ros2_ws/src/roomie_agui/: setup.py
ros2_ws/src/roomie_agui/roomie_agui/: _old_roomie_agui.py  admin_gui.ui  communications.py  config.py  roomie_agui.py  roomie_agui_old.py
ros2_ws/src/roomie_ec/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/roomie_ec/launch/: roomie_ec_launch.py  test_communication_launch.py  test_integration_launch.py
ros2_ws/src/roomie_ec/map/: map02.pgm  map02.yaml
ros2_ws/src/roomie_ec/resource/: roomie_ec
ros2_ws/src/roomie_ec/roomie_ec/: __init__.py  config.py  roomie_ec_node.py
ros2_ws/src/roomie_ec/scripts/: button_controller.py  button_detector.py  test_communication_node.py  topic_monitor_node.py
ros2_ws/src/roomie_gc/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/roomie_gc/launch/: roomie_gc.launch.py  test_gc.launch.py
ros2_ws/src/roomie_gc/resource/: roomie_gc
ros2_ws/src/roomie_gc/roomie_gc/: README.md
ros2_ws/src/roomie_gc/roomie_gc/nodes/: roomie_gc_node.py
ros2_ws/src/roomie_gc/roomie_gc/scripts/: speed_limit_controller.py  test_servers.py  tracking_gui.py
ros2_ws/src/roomie_msgs/: CMakeLists.txt
ros2_ws/src/roomie_msgs/action/: Enroll.action  PerformTask.action  ReadCardInfo.action  ReturnCountdown.action  StartCountdown.action
ros2_ws/src/roomie_msgs/msg/robot_status/: GlassDoorStatus.msg  Obstacle.msg  RobotState.msg  RoomiePose.msg  Tracking.msg
ros2_ws/src/roomie_msgs/srv/door_elevator/: ElevatorStatus.srv
ros2_ws/src/roomie_msgs/srv/robot_control/: Location.srv  SetVSMode.srv
ros2_ws/src/roomie_msgs/srv/security/: ControlLock.srv
ros2_ws/src/roomie_msgs/srv/sensor/: ButtonStatus.srv  ButtonStatus2.srv
ros2_ws/src/roomie_rc/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/roomie_rc/launch/: rc_node.launch.py  rc_node_v2.launch.py
ros2_ws/src/roomie_rc/roomie_rc/: README.md  arm_client.py  config.py  gui_client.py  ioc_client.py  location_manager.py  rc_node.py  rc_node_v2.py  rms_client.py  test_ioc_node.py  vs_client.py
ros2_ws/src/roomie_rgui/: .gitignore  setup.py
ros2_ws/src/roomie_rgui/roomie_rgui/: rgui_node.py  screen_manager.py  test_service_client.py  ui_loader.py
ros2_ws/src/roomie_rgui/scripts/: test_service_client.py
ros2_ws/src/roomie_rgui/test/: remove_dark_blue_bg.py  remove_white.py  test.py  test.ui
ros2_ws/src/roomie_rgui/ui/: README.md
ros2_ws/src/roomie_rms/: setup.py
ros2_ws/src/roomie_rms/docs/: rms_interface_spec.md
ros2_ws/src/roomie_rms/roomie_rms/: README.md  rms_node.py
ros2_ws/src/roomie_safety_monitor/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/roomie_safety_monitor/launch/: safety_monitor_launch.py  safety_monitor_test_launch.py
ros2_ws/src/roomie_safety_monitor/roomie_safety_monitor/: safety_monitor_node.py
ros2_ws/src/roomie_simple_navigator/: package.xml  setup.cfg  setup.py
ros2_ws/src/roomie_simple_navigator/launch/: simple_drive_reverse.launch.xml
ros2_ws/src/roomie_simple_navigator/roomie_simple_navigator/: simple_navigator.py  simple_navigator2.py
ros2_ws/src/roomie_static_obstacle/: package.xml  setup.cfg  setup.py
ros2_ws/src/roomie_static_obstacle/roomie_static_obstacle/: README.md  config.py  route_manager_node.py  tuner_node.py
ros2_ws/src/roomie_vs/: SYSTEM_FREEZE_SOLUTION.md  setup.py
ros2_ws/src/roomie_vs/config/: vision_config.yaml
ros2_ws/src/roomie_vs/roomie_vs/: camera_manager.py  display_ocr.py  gpu_monitor.py  model_manager.py  obstacle_detector.py  test_vs_client.py  tracking.py  udp_streamer.py  vision_node.py  vs_node.py  vs_node.py.backup
ros2_ws/src/roomie_vs/scripts/: button_ocr_tool.py  button_ocr_tool_backup.py  ocr_test_tool.py  safe_vs_runner.sh  test_person_tracker.py  test_vs_client.py  vs_monitor.py
(+487 files in other folders)
