<?xml version="1.0"?>
<package format="3">
  <name>roomie_gc</name>
  <version>0.0.0</version>
  <description>Roomie Guidance Controller (GC): 길안내 시나리오 RC 노드</description>

  <maintainer email="dev@example.com">dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>roomie_msgs</exec_depend>
  <exec_depend>roomie_rc</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>



